# pgbox

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
pgbuild/: Makefile
src/pgbox/: __init__.py  commands.py  discovery.py  server.py
tests/: test_server.py
