[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgbox"
version = "0.1.2"
description = "Zero-config embedded PostgreSQL with pgvector for Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{ name = "Unforget", email = "team@unforget.sh" }]
keywords = ["postgresql", "pgvector", "embedded", "database", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    "fasteners>=0.19",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "psycopg2-binary",
]

[project.urls]
Homepage = "https://github.com/unforget-ai/pgbox"
Repository = "https://github.com/unforget-ai/pgbox"
Issues = "https://github.com/unforget-ai/pgbox/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pgbox = ["pginstall/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
